pro/css/pro-input.css
/*---------------------------------------------------------------------------------------------
*
*  Repeater
*
*---------------------------------------------------------------------------------------------*/

.acf-repeater {
	
}

.acf-repeater .acf-input-table {
	margin: 0 0 8px;
}

.acf-repeater .acf-row.clone {
	display: none !important;
}

.acf-repeater .acf-input-table > tbody > tr.ui-sortable-helper {
	box-shadow: 0 1px 5px rgba(0,0,0,0.2);
}

.acf-repeater .acf-input-table > tbody > tr.ui-sortable-placeholder {
	visibility: visible !important;
}

.acf-repeater .acf-input-table > tbody > tr.ui-sortable-placeholder td {
	background: #F9F9F9;
}

.acf-repeater .acf-input-table td.remove .acf-icon {
	position: relative;
	margin-left: -1px;
}

.acf-repeater .acf-input-table td.remove .acf-repeater-add-row {
	position: absolute;
	margin-top: -22px;
}


/*
*  Empty
*/

.acf-repeater.empty table thead th {
	border-bottom: 0 none;
}

.acf-repeater.empty table.row_layout {
	box-shadow: none;
	border: 0 none;
	margin: 0;
}


/*---------------------------------------------------------------------------------------------
*
*  Flexible Content
*
*---------------------------------------------------------------------------------------------*/

.acf-flexible-content {
	position: relative;
}

.acf-flexible-content > .no-value-message {
	padding: 19px;
	border: #ccc dashed 1px;
	text-align: center;
}

.acf-flexible-content > .clones {
	display: none;
}

.acf-flexible-content > .values {
	margin: 0 0 8px;
}

.acf-flexible-content .layout {
	position: relative;
	margin: 20px 0 0;
	
	
	border-radius: 0;
   
    background: #fff;
}

.acf-flexible-content .layout:first-child {
	margin-top: 0;
}

.acf-flexible-content .layout .acf-fc-layout-handle {
	display: block;
	position: relative;
	padding: 8px 10px;
	
	cursor: move;
	
	border: #E1E1E1 solid 1px;
		
	color: #333333;
	font-size: 14px;
	line-height: 1.4em;
	
}

.acf-flexible-content .layout.popup-open .acf-fc-layout-controlls {
	visibility: visible !important;	
}

.acf-flexible-content .layout .acf-fc-layout-controlls {
	visibility: hidden;
	
	position: absolute;
	top: 9px;
	right: 9px;
	
	z-index: 1;
}

.acf-flexible-content .layout:hover .acf-fc-layout-controlls {
	visibility: visible;
}

.acf-flexible-content .layout .acf-fc-layout-controlls > li {
	margin: 0 0 0 5px;
}

.acf-flexible-content .layout .acf-fc-layout-controlls .acf-button-add,
.acf-flexible-content .layout .acf-fc-layout-controlls .acf-button-remove {
	box-shadow: 0 0 0px 1px #cbcbcb;
}

.acf-flexible-content > .values > .ui-sortable-placeholder {
	visibility: visible !important;
	border: #DFDFDF dashed 2px;
	border-radius: 3px;
	box-shadow: none;
}

.acf-flexible-content .layout > .acf-input-table {
	border-top: 0 none;
	box-shadow: none;
}

.acf-flexible-content .layout > .acf-input-table > tbody > tr {
	background: #fff;
}

.acf-flexible-content .layout > .acf-input-table > thead > tr > th {
	background: none repeat scroll 0 0 #F9F9F9;
    border-bottom: 1px solid #E1E1E1;
    border-right: 1px solid #E1E1E1;
    
    font-size: 12px;
	font-family: sans-serif;
	font-weight: bold;
}

.acf-flexible-content .layout > .acf-input-table > thead > tr > th:last-child {
	border-right: 0 none;
}

.acf-fc-popup {
	position: absolute;
	
	border-radius: 3px;
	background: #333739;
	box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
	
	min-width: 135px;
	z-index: 999;
}

.acf-fc-popup .bit {
	position: absolute;
	
	left: 50%;
	margin: 0 0 0 -10px;
	
	width: 0;
	height: 0;
	
	border: transparent solid 10px;
	border-top-color: #333739;
	
	z-index: 2;
}

.acf-fc-popup .bit.top {
	top: 0;
	margin-top: -20px;
	
	border: transparent solid 10px;
	border-bottom-color: #333739;
}

.acf-fc-popup ul,
.acf-fc-popup ul li {
	list-style: none;
	display: block;
	margin: 0;
	padding: 0;
}

.acf-fc-popup ul li {
	position: relative;
	float: none;
	
	border-top: #2B2F31 solid 1px;
}

.acf-fc-popup ul li:first-child {
	margin: 0;
	border-top: 0 none;
}

.acf-fc-popup ul li a {
	color: #F9F9F9;
	font-size: 12px;
	line-height: 14px;
	padding: 6px 8px;
	display: block;
	text-decoration: none;
	position: relative;
}

.acf-fc-popup ul li a:hover {
	color: #fff;
	background: #288FBC;
	text-shadow: #1E698B 0 1px 0;
}

.acf-fc-popup ul li a .status {
	display: block;
	position: absolute;
	top: 5px;
	right: 5px;
	height: 14px;
	width: 14px;
	border-radius: 8px;
	font-size: 8px;
	line-height: 15px;
	
	border: #288FBC solid 1px;
	
	text-align: center;
	color: #DFDFDF;

	display: none;
}

.acf-fc-popup ul li a .status.warning {
	border-color: #e86740;
}

.acf-fc-popup ul li a:hover .status {
	border-color: #fff;
	color: #fff;
}

.acf-fc-popup ul li:first-child a {
	border-radius: 3px 3px 0 0;
}

.acf-fc-popup ul li:last-child a {
	border-radius: 0 0 3px 3px;
}

.acf-fc-popup ul li:only-child a {
	border-radius: 3px;
}

.acf-flexible-content .flexible-footer {
	margin: 20px 0 0;
}

.acf-fc-popup a.focus {
	position: absolute;
	width: 0;
	height: 0;
	left: 100%;
	top: 0;
	opacity: 0;
}


/*---------------------------------------------------------------------------------------------
*
*  Galery
*
*---------------------------------------------------------------------------------------------*/

.acf-gallery {
	border: #DFDFDF solid 1px;
	height: 400px;
	position: relative;
}

.acf-gallery .acf-gallery-main {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	
	background: #fff;
	z-index: 2;
}

/* attachments */
.acf-gallery .acf-gallery-attachments {
	padding: 5px;
}

.acf-gallery .acf-gallery-attachment {
	width: 25%;
	float: left;
	cursor: pointer;
}

.acf-gallery .acf-gallery-attachment .padding {
	margin: 5px;
	border: #DFDFDF solid 1px;
}

.acf-gallery .acf-gallery-attachment.active .padding {
	box-shadow: 0 0 0 1px #FFFFFF, 0 0 0 5px #1E8CBE;
}

.acf-gallery .acf-gallery-attachment img {
	display: block;
	width: 100%;
	height: auto;
}

/* toolbar */
.acf-gallery .acf-gallery-toolbar {
	position: absolute;
	right: 0;
	bottom: 0;
	left: 0;
	height: 24px;
	padding: 10px;
	
	border-top: #DFDFDF solid 1px;
}

.acf-gallery .acf-gallery-toolbar .acf-hl li {
	line-height: 24px;
}

.acf-gallery .acf-gallery-side {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	width: 299px;
	
	background: #F9F9F9;
	border-left: #DFDFDF solid 1px;
	
	z-index: 1;
	overflow: hidden;
}

.acf-gallery .acf-gallery-side-inner {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 299px;
}

.acf-gallery .bulk-actions-select {
	width: auto;
	margin: 0 1px 0 0;
}

/* side info */
.acf-gallery .acf-gallery-side-info {
	padding: 5px 0;
	margin: 0 0 15px;
	background: #F9F9F9;
	border-bottom: #F0F0F0 solid 1px;
}

.acf-gallery .acf-gallery-side-info p {
	font-size: 12px;
	line-height: 15px;
	margin: 0 0 5px;
	
	color: #999999;
}

.acf-gallery .acf-gallery-side-info p strong {
	color: #000;
}

.acf-gallery .acf-gallery-side-info a {
	text-decoration: none;
}

.acf-gallery .acf-gallery-side-info a:hover {
	text-decoration: underline;
}

.acf-gallery .acf-gallery-side-info a.remove-attachment {
	color: #BC0B0B;
}


/* side data */
.acf-gallery .acf-gallery-side-data {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 44px;
	left: 0;
	padding: 10px;
	overflow: auto;
	overflow-x: inherit;
}

.acf-gallery .acf-gallery-side-data .acf-label {
	color: #999999;
	font-size: 12px;
	line-height: 25px;
	padding: 0 4px 8px 0;
	width: auto;
	vertical-align: top;
}

.acf-gallery .acf-gallery-side-data .acf-input {
	padding: 0 0 8px;
}

.acf-gallery .acf-field textarea {
	min-height: 0;
	height: 60px;
}

/* selected */
.attachment.acf-selected {
	opacity: 0.3;
}

.attachment.acf-selected .check {
	display: block;
}

